# batsim

./: .ci-shell.nix  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  .travis.yaml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  COPYING  Doxyfile  Makefile  README.md  README.org  README.rst  TODO.org  User_report.txt  batexec.c  batsim.c  batsim.cpp  batsim.h  batsim_mickours.yaml  batsim_oarteam.yaml  context.hpp  copyright  debian8_batsim.yaml  debian8_workload_generation.yaml  default.nix  export.c  export.cpp  export.h  export.hpp  fake_sched_uds.py  fcfs_sleeper_sched.py  filler_sched.py  flake.nix  g5k_workload_generation.yaml  ipp.cpp  ipp.hpp  job.c  (+35 more)
.github/: pull_request_template.md
.gitlab/: issue_templates
ci/: default.nix  generate-dependencies-paths.bash  list-store-paths-for-cachix.bash  manual-build.bash  nix-build-and-update-dependencies-cache.bash  nix-build-clang-and-update-dependencies-cache.bash  nix-build-clang.bash  nix-build-gcc-and-update-dependencies-cache.bash  run-tests.bash  run-unittests.bash  update-batsim_dev-cache.bash  update-dependencies-cache.bash
contrib/: README.md
data/: README.md  carbon_trace_file_ex.csv
demo/: README.md  run.bash
doc/: Doxyfile  changelog.md  configuration.md  continuous_integration.md  contribute.md  data_storage_description.md  demo.Rmd  dev_batsim.md  doxygen_mainpage.md  how_it_works.md  profiles.md  proto_description.md  proto_example.txt  protocol.txt  run_batsim.md  tuto_time.md  tuto_usage.md
docs/: IO.rst  Makefile  cachix-setup.bash  changelog.rst  ci.rst  cli.rst  conf.py  contact.rst  contributing.rst  faq.rst  howto-test.rst  index.rst  input-events.rst  input-external-events.rst  input-platform.rst  input-workload.rst  installation.rst  interval-set.rst  output-energy.rst  output-jobs.rst  output-machines.rst  output-pstate.rst  output-real-exec-info.rst  output-schedule.rst  protocol.rst  redis.rst  release.rst  requirements.txt  setting-up-dev-env.rst  shell.nix  time-dilation.rst  todo.rst
env/: README.md
environments/: README.md  batsim.yaml  batsim_ci.yaml  batsim_g5k.yaml  batsim_mickours.yaml  debian8_workload_generation.yaml
events/: test_events_4hosts.txt  test_generic_event.txt  test_generic_events2.txt
get_trace_part/: Generate_JSON_file.py  Split_large_files.py  generated_trace.json  readme.txt
get_trace_part_new/: Generate_JSON_file.py  Simplified_traces.py  Simulation_trace.py  Split_large_files.py  generated_trace.json
git-hooks/: README.md  pre-commit
nix/: batsim.nix  coverage-report.nix  edc-coverage-report.nix  edc-libs.nix  edc-test.nix  internal-test.nix
old/: batexec.c  batsim.h  job.h  utils.h
profiles/: test_profile.json
src/: batexec.cpp  batsim.cpp  batsim.hpp  carbon_updater.cpp  carbon_updater.hpp  cli.cpp  cli.hpp  context.cpp  context.hpp  edc.cpp  edc.hpp  event_submitter.cpp  event_submitter.hpp  events.cpp  events.hpp  exact_numbers.hpp  export.cpp  export.hpp  external_event_submitter.cpp  external_event_submitter.hpp  external_events.cpp  external_events.hpp  ipp.cpp  ipp.hpp  job_submitter.cpp  job_submitter.hpp  jobs.cpp  jobs.hpp  jobs_execution.cpp  jobs_execution.hpp  machine_range.cpp  machine_range.hpp  machines.cpp  machines.hpp  network.cpp  network.hpp  periodic.cpp  periodic.hpp  permissions.cpp  permissions.hpp  (+19 more)
steps/: configure_apt_testing.yaml  import_batsim_experiment_tools.yaml  locality_scheduler.yaml  my_dev_tools.yaml  set_dev_git_repo.yaml  simgrid_install.yaml
test/: .gitignore  CMakeLists.txt  clean_output_dir.py  conftest.py  helper.py  is_batsim_dir.py  mpi_hostfile_localhost  pybatsim_tests.yaml  run_tests.sh  sortedcontainers_hello_world.py  test_batexec.yaml  test_call_me_later.py  test_cli.py  test_custom_mapping.py  test_demo.yaml  test_dvfs.py  test_dynamic_registration.py  test_dynamic_submit.yaml  test_dynsubmit.py  test_edc_process.py  test_energy.py  test_energy.yaml  test_energy_minimal.yaml  test_energy_query.yaml  test_energy_small.yaml  test_external_events.py  test_externalevents.py  test_fail_space_sharing.yaml  test_fewer_resources.yaml  test_fewer_resources_mapping.yaml  test_fewer_resources_total.yaml  test_kill.py  test_kill.yaml  test_kill_multiple.yaml  test_kill_progress.yaml  test_long_simulation_time.yaml  test_machine_switcher.py  test_moldable_perf_degradation.py  test_no_energy.yaml  test_no_redis.yaml  (+36 more)
test/edc-lib/: batsim_edc.h  call-later-oneshot.cpp  call-later-periodic.cpp  do-nothing.cpp  dyn-register.cpp  dyn_register.cpp  easy.cpp  exec1by1-custom-mapping.cpp  exec1by1-dvfs-dyn.cpp  exec1by1.cpp  external-event-check.cpp  fcfs.cpp  force-simu-stop.cpp  force_simu_stop.cpp  killer.cpp  machine-switcher.cpp  meson.build  periodic.cpp  platform-check.cpp  probe-energy.cpp  process-edc.cpp  rejecter.cpp  static.cpp
test/robin/: CMakeLists.txt  nowload-batsched.yaml  nowload-nosched.yaml
test/robin/doxygen-warnings/: check_no_warnings.py
test/robin/dynsubmit/: CMakeLists.txt
test/robin/energy/: CMakeLists.txt
test/robin/energy-efail/: CMakeLists.txt
test/robin/fewer-resources-compute1/: CMakeLists.txt  check_duration_consistency.py
test/robin/fewer-resources-computetot1/: CMakeLists.txt
test/robin/kill-after10s/: CMakeLists.txt
test/robin/kill-multiple/: CMakeLists.txt
test/robin/kill-onnewsubmit/: CMakeLists.txt
test/robin/kill-progress/: CMakeLists.txt  retrieve_batsim_messages_from_log.bash
test/robin/nosched/: CMakeLists.txt
test/robin/redis/: CMakeLists.txt
test/robin/set-job-metadata/: CMakeLists.txt  check_metadata_presence.py
test/robin/simple/: CMakeLists.txt
test/robin/smpi-mapping/: CMakeLists.txt  check_duration_consistency.py
test/robin/submitorder/: CMakeLists.txt  caller.bash
test/robin/timesharing/: CMakeLists.txt
test/robin/walltime/: CMakeLists.txt
tools/: batsim_output_csv_to_swf.py  check_batsim_version.py  common.py  energy_pform_generator_homo_nonet.py  job.py  swf.py  swf_to_batsim_output_csv.py  swf_to_batsim_workload_compute_only.py  swf_to_batsim_workload_delay.py  visualise_machine_state_changes.R
(+6697 files in other folders)
